--- a/child2.html
+++ b/child2.html
@@ -26,7 +26,7 @@
             <div class="childimg c2" style="width: 50%; height: 300px;"></div>
             <div class="bio">
                     <p>ესენი არიან ბამბის მომპოვლები</p>
-                    <p>ისინი იზრდებოდნენ აფრიკაში გაჭირვებაში რამაც გაზარდა მათი გამოდილება.</p>
+                    <p>ისინი იზრდებოდნენ აფრიკაში გაჭირვებაში რამაც გაზარდა მათი გამოცდილება.</p>
                     <p>ჩვენ ჩავედით და გადავარჩინეთ ეს ბავშვები</p>
                     <p>ისინი გამოგადგებიან მრავალ სხვადასხვა საქმეში</p>
                     <br>
